--- a/rumbl/web/templates/user/index.html.eex
+++ b/rumbl/web/templates/user/index.html.eex
@@ -4,8 +4,7 @@
   <%= for user <- @users do %>
     <tr>
       <td><b><%= first_name(user) %></b> (<%= user.id %>)</td>
-      <td><%= link "View", to: user_path(@conn, :show, user.id) %></td>
+      <td><%= render "user.html", user: @user %></td>
     </tr>
   <% end %>
 </table>
-  
